# jnnx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  extract-scalers.py  extract_scalers.py  generate-module  jnnx-setup  pyproject.toml  requirements.txt  setup.py  test.data  test.jags  test_model.jags  test_simple.cc  update-scalers.py  validate-jnnx  validate-module
.cursor/rules/: constitution.mdc
.cursor/rules/governance/: constitution.md  jags-interface-memo.md  jnnx-format-spec.md
.memory/: constitution.md  jags-interface-memo.md  project-description.md
demos/: ddm-calibration-test.py  ddm-simulate-recover.py  end-to-end-ddm.py  workflow-ddm.ipynb  workflow-ddm.md  workflow-sdt.ipynb  workflow-sdt.md
docs/: API.md  EXAMPLES.md  GETTING_STARTED.md  INSTALLATION.md  PROJECT_HANDOFF_MEMO.md  SKILL.md
docs/api/: API.md  SCALERS_FORMAT.md
docs/examples/: EXAMPLES.md
docs/governance/: constitution.md  jags-interface-memo.md
docs/guides/: END_TO_END_TUTORIAL.md  INSTALLATION.md
docs/internal/: PROJECT_HANDOFF_MEMO.md
jnnx/: __init__.py  core.py  utils.py
jnnx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jnnx/models/ddm.jnnx/: README.md  metadata.json  scalers.txt  test_package.py
jnnx/models/sdt.jnnx/: scalers.pkl  test_package.py
jnnx/scripts/: extract_scalers.py  generate-module  generate_module.py  jnnx-setup  jnnx_setup.py  update_scalers.py  validate-jnnx  validate_jnnx.py  validate_module.py
jnnx/templates/: Makefile.template  module.cc.template
models/ddm.jnnx/: README.md  ddm_emulator.pth  metadata.json  model.onnx  model.onnx.data  scalers.pkl  scalers.txt
models/ddm4.jnnx/: ddm4_emulator.json  ddm4_emulator.onnx  ddm4_emulator.pth  scalers.json
models/sdt.jnnx/: README.md  metadata.json  model.onnx  model.onnx.data  scalers.pkl  scalers.txt  sdt_emulator.json  sdt_emulator.pth
scripts/: check-workflow-sdt.py  generate-module  generate-module.py  jnnx-setup.py  update-scalers.py  validate-jnnx.py  validate-module  validate-module.py
src/templates/: Makefile.template  module.cc.template  simple_module.cc.template
templates/: Makefile.template  module.cc.template
tests/: test-suite.py  test_suite_full.py
