[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jnnx"
version = "1.0.0"
description = "JAGS Neural Network eXtension - Evaluate ONNX models as deterministic nodes in JAGS"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joachim Vandekerckhove", email = "joachim@uci.edu"}
]
maintainers = [
    {name = "Joachim Vandekerckhove", email = "joachim@uci.edu"}
]
keywords = ["jags", "onnx", "neural-networks", "bayesian", "mcmc"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "onnxruntime>=1.15.0",
    "py2jags>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
    "myst-parser>=0.15",
]

[project.urls]
Homepage = "https://github.com/joachimvandekerckhove/jnnx"
Repository = "https://github.com/joachimvandekerckhove/jnnx.git"
Documentation = "https://github.com/joachimvandekerckhove/jnnx#readme"
"Bug Tracker" = "https://github.com/joachimvandekerckhove/jnnx/issues"

[project.scripts]
jnnx-setup = "jnnx.scripts.jnnx_setup:main"
validate-jnnx = "jnnx.scripts.validate_jnnx:main"
generate-module = "jnnx.scripts.generate_module:main"
validate-module = "jnnx.scripts.validate_module:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jnnx*"]

[tool.setuptools.package-data]
jnnx = [
    "templates/*.template",
    "models/*.jnnx/*",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
